Wed Sep 19 16:16:38 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/win32/gdkcolor-win32.c gdk/x11/gdkcolor-x11.c 
	  gdk/linux-fb/gdkcolor-fb.c:
	Fix propagated (flags && GDK_COLOR_WRITEABLE) typo.
	(#59723)

Wed Sep 19 16:12:16 2001  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkpixbuf-render.c: Allow -1 for width/height
	to mean "width/height of pixbuf" (Patch from Matthias Clasen,
	#59723)

Wed Sep 19 16:01:27 2001  Owen Taylor  <otaylor@redhat.com>

	Patch from Frank Belew #59037 for Solaris compilation.

	* gtk/maketypes.awk: Change syntax slightly for a call
	to sub(), apparently making awk on Solaris happier.

	* gtk/gtktreeview.c: Remove C++ comments.

Wed Sep 19 15:46:29 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c: Add xgettext:no-c-format comment to
	to handle '99% of the time. (#60473, reported by Christian Rose)

	* gtk/gtkwidget.h: Remove prototype for gtk_widget_get_usize()
	which no longer exists. (#60379, reported by Vitaly Tishkov)

Wed Sep 19 11:06:24 2001  Tim Janik  <timj@gtk.org>

	* Released 1.3.8.

	* gdk/Makefile.am: kill EXTRA_DIST clearing.
	
Wed Sep 19 02:50:40 2001  Tim Janik  <timj@gtk.org>

	* demos/Makefile.am ($(testpixbuf_OBJECTS)): don't use BUILT_SOURCES
	as its broken in automake 1.4, add explicit object rule to
	generate this.
	
	* gdk-pixbuf/Makefile.am: fix maintainer and normal cleanfiles.
	get rid of uneccessary stamps, group stuff more logically, and build
	sources due to object rules. fix srcdir!=builddir.

Tue Sep 18 20:47:16 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkspinbutton.c (gtk_spin_button_size_request): Fix 
	incorrect parameter to compute_double_length
	(#58680, patch from Matthias Clasen)

	Fixes for compilation with Forte cc. (#59734, Derek Rafter)

	* gtk/gtkwindow.h gtk/gtksizegroup.h: Remove extra ;.

	* gdk/gdktypes.h (GdkModifierType): Write 1u << 31
	for GDK_RELEASE_MASK to avoid warnings with Forte.

	* gtk/gtktexttag.c gtk/gtkcellrendertext.c: Add some missing